k8/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-go-wep-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: my-go-wep-app
  template:
    metadata:
      labels:
        app: my-go-wep-app
    spec:
      containers:
      - name: my-go-wep-app
        image: ram7800/mygowebapp:v1
        ports:
        - containerPort: 8080
