k8/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
  labels:
    app: gowebapp-service  
spec:
  type: ClusterIP          
  selector:
    app: my-go-wep-app         # CRITICAL: This must match your Pod's template label!
  ports:
    - name: http
      protocol: TCP
      port: 80             # The port the Service exposes inside the cluster
      targetPort: 8080     # containerPort
