k8/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp-ingress
  annotations:
    # Specifies the Ingress Controller handling this (usually nginx)
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: goapp.local        # CRITICAL: Your domain name goes here
      http:
        paths:
          - path: /                  # Matches all paths under this domain
            pathType: Prefix
            backend:
              service:
                name: gowebapp-service 
                port:
                  number: 80
